--- a/sait_diplom.html
+++ b/sait_diplom.html
@@ -7,38 +7,54 @@
   <title>darstell</title>
 </head>
 <body>
-  <div class="menu">
-    <div class="menu1">
-      <div class="butt">
-        <img src="darstell.svg" alt="Иконка" class="menu-icon">
-        <p class="category-button">Фото</p>
-        <p class="category-button">Иллюстрации</p>
-        <p class="category-button">Коллекции</p>
+
+<div class="header">
+  <div class="container">
+    <div class="header-line">
+      <div class="header-logo">
+        <img src="darstell.svg">
       </div>
-      <div class="search-container">
-        <input type="text" placeholder="Найти" class="search-input">
-        <img src="lupa.svg" alt="Иконка поиска" class="search-icon"> <!-- Иконка поиска -->
+      <div class="menu">
+        <a class="general-batton" href="@">Фото</a>
+        <div class="general-palk"></div>
+        <a class="general-batton" href="@">Иллюстрация</a>
+        <div class="general-palk"></div>
+        <a class="general-batton" href="@">Коллекция</a>
       </div>
-      <div class="icon-container"> <!-- Контейнер для дополнительных иконок -->
-        <img src="upload.svg" alt="Загрузить" class="additional-icon">
-        <img src="arhiv.svg" alt="Архив" class="additional-icon">
-        <img src="account.svg" alt="Аккаунт" class="additional-icon">
+      <div class="poisk-c">
+        <input type="text" placeholder="Найти" class="poisk">
+        <img src="lupa.svg" alt="Искать" class="poisk-icon">
+      </div>
+      <div class="icon-menu">
+        <img class="menu-icon" src="upload.svg">
+        <img class="menu-icon" src="arhiv.svg">
+        <img class="menu-icon" src="account.svg">
       </div>
     </div>
-	<div class="categories"> <!-- Контейнер для категорий -->
-		<button class="category-button">Обои</button>
-		<button class="category-button">Природа</button>
-		<button class="category-button">3D-рендеры</button>
-		<button class="category-button">Текстуры</button>
-		<button class="category-button">Архитектура и интерьеры</button>
-		<button class="category-button">Путешествовать</button>
-		<button class="category-button">Фильм</button>
-		<button class="category-button">Животные</button>
-		<button class="category-button">Спорт</button>
-	  </div>
+    <div class="palka"></div>
+    <div class="header-line">
+      <a class="general-batton" href="@">Обои</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">Природа</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">3D</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">Текстуры</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">Интерьеры</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">Путешествовать</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">Фильм</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">Люди</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">Животные</a>
+      <div class="general-palk"></div>
+      <a class="general-batton" href="@">Экспериментальный</a>
+    </div>
   </div>
 
-  
-
+</div>
 </body>
 </html>
